# ChangeLog for x11-libs/wxGTK
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-libs/wxGTK/ChangeLog,v 1.98 2005/12/06 12:34:48 hanno Exp $

  06 Dec 2005; Hanno Boeck <hanno@gentoo.org>
  +files/wxWidgets-2.6.2-gcc41.patch, wxGTK-2.6.2-r1.ebuild:
  Fix for gcc 4.1.

  26 Nov 2005; Karol Wojtaszek <sekretarz@gentoo.org>
  +files/wxGTK-2.4.2-pango_fix.patch, +wxGTK-2.4.2-r4.ebuild:
  Fixed linking problems with pango, bug #113410

  26 Nov 2005; Karol Wojtaszek <sekretarz@gentoo.org> files/intl.cpp.diff:
  Fixed unicode patch not to expand cvs tag

*wxGTK-2.6.2-r1 (26 Nov 2005)

  26 Nov 2005; Karol Wojtaszek <sekretarz@gentoo.org> +files/intl.cpp.diff,
  wxGTK-2.6.2.ebuild, +wxGTK-2.6.2-r1.ebuild:
  Fixed amule and pgadmin3 crash while using broken wxGTK-2.6.2 with unicode
  support, bug #109483 and #109218

  15 Oct 2005; Jeremy Huddleston <eradicator@gentoo.org>
  wxGTK-2.6.2.ebuild:
  Fixed USE=-X logic.

*wxGTK-2.6.2 (11 Oct 2005)

  11 Oct 2005; Rob Cakebread <pythonhead@gentoo.org> +wxGTK-2.6.2.ebuild:
  Version bump. Closes #106969 Removed gtk2 flag per #106560

  17 Sep 2005; Aron Griffis <agriffis@gentoo.org> wxGTK-2.6.1.ebuild:
  Mark 2.6.1 stable on alpha

  08 Sep 2005; Aron Griffis <agriffis@gentoo.org> wxGTK-2.6.1.ebuild:
  Mark 2.6.1 stable on ia64

  06 Sep 2005; Karol Wojtaszek <sekretarz@gentoo.org> wxGTK-2.6.1.ebuild:
  Stable on amd64

  03 Sep 2005; Markus Rothe <corsair@gentoo.org> wxGTK-2.6.1.ebuild:
  Stable on ppc64

  02 Sep 2005; Michael Hanselmann <hansmi@gentoo.org> wxGTK-2.6.1.ebuild:
  Stable on ppc.

  30 Aug 2005; Gustavo Zacarias <gustavoz@gentoo.org> wxGTK-2.6.1.ebuild:
  Stable on sparc

  28 Aug 2005; Rob Cakebread <pythonhead@gentoo.org> wxGTK-2.6.1.ebuild:
  Marked x86 stable

*wxGTK-2.6.1 (12 Jul 2005)

  12 Jul 2005; Rob Cakebread <pythonhead@gentoo.org> +wxGTK-2.6.1.ebuild:
  Version bump.
