@@ -1,6 +1,10 @@
 # ChangeLog for x11-libs/wxGTK
-# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/wxGTK/ChangeLog,v 1.98 2005/12/06 12:34:48 hanno Exp $
+# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/wxGTK/ChangeLog,v 1.99 2006/01/22 03:09:09 spyderous Exp $
+
+  22 Jan 2006; Donnie Berkholz <spyderous@gentoo.org>;
+  wxGTK-2.4.2-r4.ebuild:
+  Fix for modular X.
 
   06 Dec 2005; Hanno Boeck <hanno@gentoo.org>
   +files/wxWidgets-2.6.2-gcc41.patch, wxGTK-2.6.2-r1.ebuild:
